--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -13,7 +13,9 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello, world! This is the site of Ralph Kunze.</h1>
+<h4>Bitte besuchen Sie auch: <a href="http://www.sandbrand.de">Sandbrand - Agentur f&uuml;r Beachvolleyball</a></h4>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
