--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-	<h1>Willkommen!</h1>
+	<h1>Willkommen au der Seite von Ralph Kunze</h1>
 </header>
 <article>
 	<p>
@@ -20,6 +20,8 @@
 	<p>
 		Ihr Kursteam
 	</p>
+<h2>Bitte besuchen Sie auch <a href="http://www.sandbrand.de">Sandbrand - Agentur für Beachvolleyball</a></h2>
+
 </article>
 </body>
 </html>
